--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,11 +25,12 @@ jobs:
       - run: bundle -v
       - restore_cache:
           keys:
-            - ci_test_1-{{ checksum "Gemfile.lock" }}
+            - ci_test_2-{{ checksum "Gemfile.lock" }}
+
       - run: bundle install --jobs=3 --retry=3 --deployment --path=./vendor/bundle
 
       - save_cache:
-          key: rails-demo-bundle-v2-{{ checksum "Gemfile.lock" }}
+          key: ci_test_2-{{ checksum "Gemfile.lock" }}
           paths:
             - .vendor/bundle
 
