add checkout and load_cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,10 +97,14 @@ jobs:
   test:
     executor: app
     steps:
+      - checkout
+      - load_cache
       - rspec
   lint:
     executor: app
     steps:
+      - checkout
+      - load_cache
       - lint
       - jest
 
