--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,18 +29,18 @@ commands:
             - ./vendor/bundle
       - save_cache:
           name: Save Node Module Cache
-          key: cache-node_modules-{{ checksum "yarn.lock" }}
+          key: cache-node_modules-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
-  setup_test:
+  bundler_install:
     steps:
       - run:
           name: Bundler install
           command: |
             gem update --system
             gem install bundler -v 2.1.4
-      - run: bundle -v
-
+  setup_test:
+    steps:
       - run: bundle install --jobs=3 --retry=3 --deployment --path=./vendor/bundle
 
       - run:
@@ -77,11 +77,12 @@ commands:
             npm run test
 
 jobs:
-  build_and_test: # ローカル用
+  build_and_test: # ローカルで全部実行用
     executor: app
     steps:
       - checkout
       - load_cache
+      - bundler_install
       - setup_test
       - dump_cache
       - rspec
@@ -92,18 +93,21 @@ jobs:
     steps:
       - checkout
       - load_cache
+      - bundler_install
       - setup_test
       - dump_cache
   test:
     executor: app
     steps:
       - checkout
+      - bundler_install
       - load_cache
       - rspec
   lint:
     executor: app
     steps:
       - checkout
+      - bundler_install
       - load_cache
       - lint
       - jest
