--- a/config/database.yml
+++ b/config/database.yml
@@ -55,10 +55,13 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+#test:
+#  <<: *default
+#  database: ci_test_test
+#  username: postgres
 test:
-  <<: *default
-  database: ci_test_test
-  username: postgres
+  adapter: postgresql
+  database: dmp_ci_test<%= ENV['TEST_ENV_NUMBER'] %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
